# Photon

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Photon.sln  README.md
.github/workflows/: main.yml
Application/: CMakeLists.txt
Application/src/: Main.cpp
GLFW/: GLFW.vcxproj  GLFW.vcxproj.filters
IMGui/: IMGui.vcxproj  IMGui.vcxproj.filters
Photon/: CMakeLists.txt  Photon.vcxproj  Photon.vcxproj.filters
Photon/include/Photon/Collision/: Ray.hpp
Photon/include/Photon/Color/: Color.hpp
Photon/include/Photon/Files/: File.hpp  PPMFile.hpp
Photon/include/Photon/Math/: MathUtils.hpp  Point.hpp  Vector.hpp  Vector3.hpp
Photon/src/: Application.cpp  Application.h  Main.cpp
Photon/src/Collision/: Ray.cpp
Photon/src/Color/: Color.cpp
Photon/src/Editor/Input/: Input.cpp  Input.h  KeyCodes.h
Photon/src/Editor/Layers/: Layer.h
Photon/src/Editor/Profiling/: Timer.cpp  Timer.h
Photon/src/Editor/Vulkan/: VulkanUtils.cpp  VulkanUtils.h
Photon/src/Files/: File.cpp  PPMFile.cpp
Photon/src/Math/: MathUtils.cpp  Point.cpp  Vector.cpp  Vector3.cpp
Photon/src/Rendering/: Image.cpp  Image.h
Photon/test/: ExampleTest.cpp
Photon/test/Color/: ColorTests.cpp
Photon/test/Math/: MathUtilsTests.cpp  PointTests.cpp  VectorTests.cpp
